src/sass/_header.scss
/* ---------------hero --------------- */

.header {
  position: relative;
  background-color: rgba(255, 184, 202, 1);
  overflow: hidden;
  min-height: 502px;
  margin: 0 auto;
}

@media screen and (max-width: 767px) {
  .header {
    max-width: 480px;
    min-height: 502px;
  }
}

@media screen and (min-width: 768px) {
  .header {
    max-width: 768px;
    min-height: 416px;
  }
}

@media screen and (min-width: 1280px) {
  .header {
    max-width: 1280px;
    min-height: 664px;
  }
}

.header__main-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 8px 0;

  @media screen and (min-width: 768px) {
    margin-top: 32px;
    margin-bottom: 0;
  }

  @media screen and (min-width: 1280px) {
    margin-top: 37px;
    margin-right: 0;
    margin-left: 0;
    margin-bottom: 0;
  }
}

.nav {
  @media screen and (max-width: 1279px) {
    display: none;
  }
}

.nav {
  position: absolute;
  left: 390px;
  z-index: 2;
}

.site-nav {
  display: flex;
  align-items: center;
  margin-inline-start: auto;
}

.site-nav__item + .site-nav__item {
  margin-left: 35px;
}

.site-nav__link {
  display: block;
  padding-top: 40px;
  padding-bottom: 40px;

  font-weight: 500;
  font-size: 16px;
  line-height: 1.31;
  letter-spacing: 0.02em;
  text-decoration: none;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  color: var(--text-accent-color);

  &:hover,
  &:focus {
    color: var(--main-title-color);
  }
}

.site-nav__link--current {
  color: (--main-title-color);
}

.mobile-menu {
  position: relative;
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 0;
  right: 0;
  transform: translateX(100%);
  width: 254px;
  height: 100%;
  padding: 0;
  padding-top: 60px;
  background-color: var(--bg-mob-menu);
  z-index: 20;

  transform: translateX(100%);
  transition: transform 250ms ease-in-out;

  @media screen and (max-width: 479px) {
    max-width: 479px;
  }

  @media screen and (min-width: 768px) {
    max-width: 768px;
    width: 33.3%;
    height: 100vh;
  }

  @media screen and (min-width: 1280px) {
    display: none;
  }
}

.mobile-menu.is-open {
  transform: translateX(0%);
  .mobile-menu__link--current {
    color: #d41443;
  }
}

.mobile-menu__list {
  margin: 0 auto;
  margin-bottom: 20px;
}

.mobile-menu__btn {
  align-items: center;
  justify-content: center;

  min-width: 186px;
  height: 44px;
  border: none;
  border-radius: 22px;

  font-weight: 700;
  font-size: 16px;
  line-height: 1.88;
  letter-spacing: 0.06em;

  background-color: var(--text-accent-color);
  color: var(--main-title-color);

  cursor: pointer;
}

.mobile__close--btn {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 20px;
  height: 20px;
  border: none;
  background-color: transparent;
  color: var(--text-accent-color);
}

.mobile-menu__item {
  width: 100%;
  border-bottom: 1px solid #e18298;
  padding: 13px 20px;
}

.mobile-menu__link {
  font-family: 'DM Sans';
  font-weight: 700;

  line-height: 1.29;
  letter-spacing: 0.02em;
  text-decoration: none;
  color: #ffffff;

  &:not(:last-child) {
    margin-bottom: 32px;
  }
}

.header__mobile-menu-btn {
  display: flex;
  padding: 0;

  align-items: center;
  justify-content: center;
  width: 20px;
  height: 12px;
  margin-left: auto;
  margin-right: 0;
  border: none;
  background-color: transparent;
  z-index: 10;
  cursor: pointer;

  &:hover > .header__mobile-menu-icon,
  &:focus > .header__mobile-menu-icon {
    fill: var(--main-title-color);
  }

  @media screen and (min-width: 1280px) {
    display: none;
  }
}

.header__mobile-menu-icon {
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.btn__header {
  display: inline-flex;
  align-items: center;
  justify-content: center;

  min-width: 159px;
  height: 44px;
  border: none;
  border-radius: 22px;

  font-weight: 700;
  font-size: 16px;
  line-height: 1.88;
  letter-spacing: 0.06em;

  background-color: #ffffff;
  color: #d41443;

  cursor: pointer;

  margin-left: 32px;

  @media screen and (max-width: 767px) {
    display: none;
  }
}

.btn__icon {
  margin-left: 12px;
}

.header-hero__circle {
  position: absolute;
  z-index: 1;

  width: 345px;
  height: 345px;
  background-color: #ffa5ba;
  border-radius: 50%;

  top: 83px;
  left: 36px;
}

@media screen and (min-width: 768px) {
  .header-hero__circle {
    width: 334px;
    height: 334px;
    top: 43px;
    left: 248px;
  }
}

@media screen and (min-width: 1280px) {
  .header-hero__circle {
    width: 534px;
    height: 534px;
    top: 54px;
    left: 517px;
  }
}

.header-hero__photo-ice-cream {
  position: absolute;
  z-index: 2;
  top: 13px;
  left: 81px;
}

@media screen and (min-width: 768px) {
  .header-hero__photo-ice-cream {
    top: 37px;
    left: 74px;
  }
}

@media screen and (min-width: 1280px) {
  .header-hero__photo-ice-cream {
    top: 63px;
    left: 123px;
  }
}

.header-hero__block {
  position: absolute;
  top: 194px;
  left: 20px;
  width: 224px;
  z-index: 3;
}

@media screen and (min-width: 768px) {
  .header-hero__block {
    width: 166px;
    top: 104px;
    left: 32px;
  }
}

@media screen and (min-width: 1280px) {
  .header-hero__block {
    width: 277px;
    top: 147px;
    left: 16px;
  }
}

.header-hero__main-title {
  font-family: 'Titan One';
  font-weight: 400;
  font-size: 26px;
  line-height: 1.15;
  letter-spacing: 0.04em;
  text-transform: uppercase;

  color: #ffffff;
  margin-bottom: 23px;
}

@media screen and (min-width: 768px) {
  .header-hero__main-title {
    font-size: 22px;
    line-height: 1.04;
    margin-bottom: 20px;
  }
}

@media screen and (min-width: 1280px) {
  .header-hero__main-title {
    font-size: 38px;
    line-height: 1.16;
    margin-bottom: 24px;
  }
}

.header-hero__main-title--big {
  font-size: 48px;
  line-height: 0.96;
  text-transform: uppercase;
  color: #d41443;
}

@media screen and (min-width: 768px) {
  .header-hero__main-title--big {
    font-size: 34px;
    line-height: 0.9;
  }
}

@media screen and (min-width: 1280px) {
  .header-hero__main-title--big {
    font-size: 58px;
    line-height: 0.9;
  }
}

.header-hero__list {
  display: flex;
  flex-direction: row;
}

.header-hero__link {
  font-family: 'DM Sans';
  font-weight: 400;
  font-size: 8px;
  line-height: 10px;
  display: flex;
  align-items: center;
  text-align: center;
}

@media screen and (min-width: 1280px) {
  .header-hero__link {
    font-size: 14px;
    line-height: 1.29;
  }
}

.header-hero__button {
  padding: 7px 14px;
  border: transparent;
  border-radius: 20px;

  font-size: 8px;
  line-height: 1.3;
  display: flex;
  align-items: center;
  text-align: center;
  cursor: pointer;
}

@media screen and (min-width: 1280px) {
  .header-hero__button {
    padding: 11px 23px;
    font-size: 14px;
    line-height: 1.29;
  }
}

.header-hero__button--red {
  color: #ffffff;
  background: #d41443;
}

.header-hero__button--white {
  color: #d41443;
  background: #ffffff;
}

.header-hero__button + .header-hero__button {
  margin-left: 8px;
}

@media screen and (min-width: 1280px) {
  .header-hero__button + .header-hero__button {
    margin-left: 12px;
  }
}

@media screen and (max-width: 767px) {
  .header-hero__photo-jug {
    display: none;
  }
}

.header-hero__photo-jug {
  position: absolute;
  left: 32px;
  bottom: 16px;
  width: 152px;
  height: 154px;
}

@media screen and (min-width: 1280px) {
  .header-hero__photo-jug {
    position: absolute;
    left: 16px;
    bottom: 60px;
    width: 213px;
    height: 216px;
  }
}

@media screen and (max-width: 768px) {
  .header-hero__product-description {
    display: none;
  }
}

.header-hero__product-description {
  position: absolute;
  z-index: 5;

  margin-top: auto;
  margin-bottom: 56px;
  margin-left: 184px;
  bottom: 0;
}

@media screen and (min-width: 1280px) {
  .header-hero__product-description {
    margin-bottom: 84px;
    margin-left: 229px;
  }
}

.header-hero__product-text {
  font-weight: 400;
  font-size: 8px;
  line-height: 1, 5;
  color: #ffffff;

  max-width: 114px;
}

@media screen and (min-width: 1280px) {
  .header-hero__product-text {
    font-size: 14px;
    line-height: 1.4;

    max-width: 200px;
  }
}

.header-hero__button-arrow {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 18px;
  width: 18px;
  border-radius: 50%;
  border: none;
  background-color: #ffffff;

  margin-top: 7px;
  cursor: pointer;
}

@media screen and (min-width: 1280px) {
  .header-hero__button-arrow {
    height: 26px;
    width: 26px;

    margin-top: 20px;
  }
}

.header-hero__icon {
  background-color: transparent;
  fill: #d41443;
}

@media screen and (max-width: 767px) {
  .header-hero__photo-girl {
    display: none;
  }
}

.header-hero__photo-girl {
  position: absolute;
  z-index: 5;
  right: 32px;
  bottom: -2px;
}

@media screen and (min-width: 1280px) {
  .header-hero__photo-girl {
    right: 16px;
  }
}

@media screen and (max-width: 767px) {
  .header-hero__branches {
    display: none;
  }
}

.header-hero__branches {
  margin-top: 16px;
  margin-right: 6px;
}

@media screen and (min-width: 1280px) {
  .header-hero__branches {
    margin-top: 153px;
    margin-right: 16px;
  }
}

.header-hero__branches-item + .header-hero__branches-item {
  margin-top: 17px;
}

@media screen and (min-width: 1280px) {
  .header-hero__branches-item + .header-hero__branches-item {
    margin-top: 18px;
  }
}

.header-hero__branches-item {
  position: relative;
  z-index: 2;
}

.header-hero__branches-number {
  font-family: 'Titan One';
  font-weight: 400;
  font-size: 28px;
  line-height: 1.14;
  text-align: right;
  letter-spacing: 0.04em;
  text-transform: uppercase;

  color: #d41443;
}

@media screen and (min-width: 1280px) {
  .header-hero__branches-number {
    font-size: 46px;
    line-height: 1.15;
  }
}

.header-hero__branches-type {
  font-weight: 400;
  font-size: 8px;
  line-height: 1.25;
  text-align: right;

  color: #ffffff;
}

@media screen and (min-width: 1280px) {
  .header-hero__branches-type {
    font-size: 14px;
    line-height: 1.29;
  }
}

.header-hero__point {
  position: absolute;
  z-index: -1;

  width: 16px;
  height: 16px;
  background-color: #ffffff;
  border-radius: 50%;

  top: -3px;
  right: -6px;
}

@media screen and (min-width: 1280px) {
  .header-hero__point {
    width: 30px;
    height: 30px;

    top: -6px;
    right: -15px;
  }
}

//
.modal__header {
  position: relative;

  margin-left: auto;
  margin-right: auto;

  width: 100%;

  max-width: 450px;

  background-color: ffffff;

  transition: transform 20ms cubic-bezier(0.4, 0, 0.2, 1);

  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 4px;

  @media screen and (min-width: 768px) {
    position: absolute;
    top: 50%;
    left: 50%;

    transform: translate(-50%, -50%) scale(1);
  }
}

